--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles.css">
   <title>Js-projects</title>
 </head>
 
@@ -12,7 +13,7 @@
   <section class="main">
     <div class="main-cards">
       <a href="./slider.html" class="main-card">Карусель</a>
-      <a href="#" class="main-card">Часы</a>
+      <a href="./clock.html" class="main-card">Часы</a>
       <a href="#" class="main-card">Список покупок</a>
     </div>
   </section>
