--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="main-cards">
       <a href="./slider.html" class="main-card">Карусель</a>
       <a href="./clock.html" class="main-card">Часы</a>
-      <a href="#" class="main-card">Список покупок</a>
+      <a href="./list.html" class="main-card">Список покупок</a>
     </div>
   </section>
 </body>
+
 </html>
