--- a/api.html
+++ b/api.html
@@ -14,7 +14,7 @@
     <div class="header-title">Unsplash API Demo</div>
     <div class="header-form">
       <input class="header-input" id="input" type="text" placeholder="Search...">
-      <button class="header-button" type="submit" onclick="addProduct()">Find</button>
+      <button class="header-button" type="submit" onclick="findPictures()">Find</button>
     </div>
   </header>
 
