--- a/clock.html
+++ b/clock.html
@@ -12,11 +12,11 @@
 <body>
   <div class="hero">
     <div class="clock-wrapper">
-      <div id="weekday" class="clock-item clock-weekday"></div>
-      <div class="clock-item">:</div>
-      <div id="hours" class="clock-item clock-hours"></div>
-      <div class="clock-item">:</div>
-      <div id="minutes" class="clock-item clock-minutes"></div>
+      <p id="weekday" class="clock-item clock-weekday"></p>
+      <p class="clock-item">:</p>
+      <p id="hours" class="clock-item clock-hours"></p>
+      <p class="clock-item">:</p>
+      <p id="minutes" class="clock-item clock-minutes"></p>
     </div>
   </div>
 
