added stopwatch and fixed slider

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-  <section class="main">
+  <section class="hero">
     <div class="main-cards">
-      <a href="./slider.html" class="main-card">Карусель</a>
-      <a href="./clock.html" class="main-card">Часы</a>
-      <a href="./list.html" class="main-card">Список покупок</a>
+      <a href="./slider.html" class="main-card">Slider</a>
+      <a href="./clock.html" class="main-card">CLock</a>
+      <a href="./list.html" class="main-card">Grocery List</a>
+      <a href="./api.html" class="main-card">API</a>
+      <a href="./timer.html" class="main-card">Stopwatch</a>
     </div>
   </section>
 </body>
