--- a/slider.html
+++ b/slider.html
@@ -11,42 +11,18 @@
 
 <body>
   <div class="slider-main">
-    <button onclick="slideImg(-1)"class="arrow left"></button>
+    <button onclick="slideImg(-1)" class="arrow left"></button>
 
-    <div class="slider-wrapper">
-      <div class="img">
-        <img src="./img/1.jpeg" alt="car">
-      </div>
-      <div class="img">
-        <img src="./img/2.jpeg" alt="car">
-      </div>
-      <div class="img">
-        <img src="./img/4.jpeg" alt="car">
-      </div>
-      <div class="img">
-        <img src="./img/5.jpeg" alt="car">
-      </div>
-      <div class="img">
-        <img src="./img/3.jpeg" alt="car">
-      </div>
-      <div class="img">
-        <img src="./img/6.jpeg" alt="car">
-      </div>
+    <div id="slider-wrapper" class="slider-wrapper">
     </div>
 
     <button onclick="slideImg(1)" class="arrow right"></button>
   </div>
 
-  <div class="dots">
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
+  <div id="dots" class="dots">
   </div>
-  
-  <script src="./index.js"></script>
+
+  <script src="./slider.js"></script>
 </body>
 
 </html>
