--- a/timer.html
+++ b/timer.html
@@ -11,20 +11,24 @@
 
 <body>
   <div class="hero">
-    <div class="clock-wrapper">
-      <div id="weekday" class="clock-item clock-weekday"></div>
-      <div class="clock-item">:</div>
-      <div id="hours" class="clock-item clock-hours"></div>
-      <div class="clock-item">:</div>
-      <div id="minutes" class="clock-item clock-minutes"></div>
-    </div>
+    <div id="weekday" class="timer-title">Stopwatch</div>
 
     <div class="clock-wrapper">
-      <div id="weekday" class="clock-item-title">Секундомер</div>
-      <div id="hours" class="clock-item clock-hours"></div>
-      <div class="clock-item">:</div>
       <div id="minutes" class="clock-item clock-minutes"></div>
+      <div class="clock-item">:</div>
+      <div id="seconds" class="clock-item clock-seconds"></div>
+      <div class="clock-item">,</div>
+      <div id="milliseconds" class="clock-item clock-milliseconds"></div>
     </div>
+
+    <div class="timer-button-wrapper">
+      <a onclick="startStopwatch()">Start</a>
+      <a onclick="pauseStopwatch()">Pause</a>
+      <a onclick="clearStopwatch()">Clear</a>
+      <a onclick="countLap()">Lap</a>
+    </div>
+
+    <div id="lap-wrapper" class="lap-wrapper"></div>
   </div>
 
   <script src="./timer.js"></script>
